added individual order book, results, pnl
