# swagger_server/swagger/swagger.yaml
@@ -188,6 +188,97 @@ paths:
           content: {}
       x-swagger-router-controller: swagger_server.controllers.market_maker_controller
       x-openapi-router-controller: swagger_server.controllers.market_maker_controller
+  /orderbook/{userId}:
+    get:
+      tags:
+      - Market Maker
+      summary: Get top 10 unfulfilled buy and sell orders
+      description: Get order book
+      operationId: get_order_book_by_user_id
+      parameters:
+      - name: userId
+        in: path
+        description: User ID
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Order'
+                x-content-type: application/json
+        "400":
+          description: Bad Request
+          content: {}
+        "500":
+          description: Internal Server Error
+          content: {}
+      x-swagger-router-controller: swagger_server.controllers.market_maker_controller
+      x-openapi-router-controller: swagger_server.controllers.market_maker_controller
+  /expected_pnl/{userId}:
+    get:
+      tags:
+      - Market Maker
+      summary: Get expected PnL
+      description: Get expected PnL
+      operationId: get_user_pnl
+      parameters:
+      - name: userId
+        in: path
+        description: User ID
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: number
+                x-content-type: application/json
+        "400":
+          description: Bad Request
+          content: {}
+        "500":
+          description: Internal Server Error
+          content: {}
+      x-swagger-router-controller: swagger_server.controllers.market_maker_controller
+      x-openapi-router-controller: swagger_server.controllers.market_maker_controller
+  /results:
+    get:
+      tags:
+      - Market Maker
+      summary: Get results
+      description: Get results
+      operationId: get_results
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+                x-content-type: application/json
+        "400":
+          description: Bad Request
+          content: {}
+        "500":
+          description: Internal Server Error
+          content: {}
+      x-swagger-router-controller: swagger_server.controllers.market_maker_controller
+      x-openapi-router-controller: swagger_server.controllers.market_maker_controller
 components:
   schemas:
     User:
